syntax = "proto3";

option csharp_namespace = "API";

package user;

service User {
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;  
}

message RegisterResponse {
  string accessToken = 1;
}
